src/main/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plessme-svc
  namespace: dev
spec:
  selector:
    app: plessme
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
