src/main/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: plessme-ing
  namespace: dev
  labels:
    app: plessme
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 8k
    certmanager.k8s.io/cluster-issuer: cscope-ci-certificate-authority
spec:
  rules:
  - host: plessme.bongladesch.com
    http:
      paths:
      - path: /
        backend:
          serviceName: plessme-svc
          servicePort: 8080
  tls:
  - hosts:
    - plessme.bongladesch.com
    secretName: plessme-bongladesch-com-tls-secret
